<resources>
    <string name="app_name">Cari Hewan</string>
    <string name="result">Hasil Pencarian: %1$s</string>
    <string name="search">Nama hewan</string>
    <string name="message">%1$s diklik!</string>

    <string name="home">Home</string>
    <string name="galeri">Galeri</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>

    <string name="title_detail">Detail</string>
    <string name="share">Share</string>
    <string name="bagikan_template">Hewan: %1$s</string>
    <string name="tv_hint">[Hewan yang tersedia : Sapi, bebek, ayam, angsa, domba, kalkun, kambing, kelinci, kerbau, kuda]</string>
    <string name="latin_detail">Latin: %1$s</string>

    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="tentang_aplikasi">Tentang</string>
    <string name="hasil_x">Hewan: %1$s</string>
    <string name="data_x">Latin: %1$s</string>

    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <string name="copyright">Cari-Hewan merupakan aplikasi yang memungkinkan user untuk mencari gambar yang sesuai dengan nama hewan.\nAplikasi ini dibuat untuk memenuhi Asesment mobpro 1.\nTemukan kodenya di https://github.com/arnolddominggos0/Galeri-hewan.git\n\nCopyright © 2023 Arnold Sitompul</string>

    <string name="action_switch_layout">Ubah Layout</string>
    <string name="pengertian_hewan">Harimau tergolong dalam hewan mamalia yang memiliki tulang belakang dan berdarah panas. Harimau adalah spesies kucing terbesar dari jenisnya, bahkan melebihi ukuran singa. Selain itu harimau juga termasuk kucing tercepat setelah saudaranya, cheetah. Harimau juga termasuk hewan karnivora, biasanya mereka memburu mangsa dengan ukuran badan agak besar. Seperti rusa, kijang, domba, zebra, babi dan jenis hewan mamalia lainnya. Apabila hewan-hewan tesebut tidak ditemukan harimau, maka mereka mencari hewan dengan ukuran lebih kecil seperti landak.</string>
    <string name="sumber">https://karyapemuda.com/hewan-karnivora/</string>
    <string name="koneksi_error">Koneksi Eror</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Ada hewan karnivora baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>


</resources>